syntax = "proto3";

package api;
option go_package = "github.com/slory7/angulargo/src/proto/api";

import "trending/trending.proto" ;

service TrendingSrv{
    rpc GetGithubTrending(trending.Request) returns (trending.GithubTrendingInfo){        
    }
}

