syntax = "proto3";

package gather;
option go_package = "github.com/slory7/angulargo/src/proto/gather";

service Gather {
    rpc GetHttpContent (Request) returns (Result);
}

message Request {
    string baseUrl = 1;
    string relativeUrl = 2;
    map<string, string> urlParams = 3;
    map<string, string> headers = 4;
    string contentType = 5;
    string method = 6;
    string postData = 7;
    int32 timeOut = 8;
}

message Result {
    string Content = 1;
}