syntax = "proto3";

package trending;

import  "github.com/protocolbuffers/protobuf/src/google/protobuf/timestamp.proto";

service Trending{
    // Get trending
    rpc GetGithubTrending(Request) returns (GithubTrendingInfo);
    // Fetch today's trending from web
    rpc FetchGithubTrending(Empty) returns (GithubTrendingInfo);
    // Get today's trending, if not exists, fetch and save it
    rpc GetAndSaveGithubTrending(Empty) returns (GithubTrendingInfo);
}

message Empty{    
}

message Request{
    string Title = 1;
}

message GithubTrendingInfo{
    string Title = 1;
    google.protobuf.Timestamp  TrendingDate = 2;
    repeated GitRepo GitRepos = 3;
}
message GitRepo  {
	int64 Id    = 1     ; 	
	string Author      =2;   
    string	Name          =3 ;
    string	Href         =4  ;
    string	Description    =5;
    string	Language       =6;
    int32	Stars             =7;
    int32	Forks         =8;    
}